# gedgraph

./: .gitignore  CHANGELOG.md  DEVELOPER.md  Makefile  README.md  gedgraph.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
gedgraph/: __init__.py  __main__.py  cli.py  dotgen.py  parser.py  pathfinder.py  progress.py
tests/: __init__.py  conftest.py  test_cli.py  test_dotgen.py  test_integration.py  test_parser.py  test_pathfinder.py  test_progress.py
tests/fixtures/: sample.ged  sample_special.ged
